--- a/Test.html
+++ b/Test.html
@@ -186,7 +186,8 @@
 
       function searchArticle() {
         ajax({
-          url: "http://localhost:10007/api/article/searchArticle", //请求地址
+          // url:"http://123.58.7.38:8080/cgi-bin/api/article/searchArticle", //请求地址
+          url:"http://localhost:10007/api/article/searchArticle", //请求地址
           type: "POST", //请求方式
           data: {
             parameters: JSON.stringify({
