恢复文章列表

--- a/Test.html
+++ b/Test.html
@@ -214,8 +214,8 @@
       function searchArticle() {
         console.log("diaoyong!!!");
         ajax({
-          // url:"http://123.58.7.38:8080/cgi-bin/api/article/searchArticle", //请求地址
-          url:"http://127.0.0.1:10007/api/article/searchArticle", //请求地址
+          url:"http://www.shrs2006.com/cgi-bin/api/article/searchArticle", //请求地址
+          // url:"http://127.0.0.1:10007/api/article/searchArticle", //请求地址
           type: "POST", //请求方式
           data: {
             parameters: JSON.stringify({
