文件上传生产环境

--- a/Test.1.html
+++ b/Test.1.html
@@ -626,7 +626,8 @@
 
     <h3>Enctype: multipart/form-data</h3>
 
-    <form action="http://localhost:10007/service/upload/imgUpload" method="post" enctype="multipart/form-data" onsubmit="AJAXSubmit(this); return false;">
+ <!--  localhost:10007-->
+    <form action="http://www.shrs2006/cgi-bin/service/upload/imgUpload" method="post" enctype="multipart/form-data" onsubmit="AJAXSubmit(this); return false;">
       <fieldset>
         <legend>Upload example</legend>
 
